Add link to GitHub project

--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@ contributed by various authors.</p>
 </ul>
 
 <p>This web site was put together for a introductory tutorial on 6502 assembly 
-for <a href="https://itema.no" target="_new">Itema AS</a>.</p>
+for <a href="https://itema.no" target="_new">Itema AS</a>. Feel free to fork
+it on <a href="https://github.com/Itema-as/6502js" target="_new">GitHub</a></p>
 
 <img src="Itema_logo.png" id="logo"/>
 
