--- a/index.html
+++ b/index.html
@@ -134,11 +134,14 @@
 					<div class="monitorControls">
 						<label for="monitoring">Monitor</label>
 						<input type="checkbox" class="monitoring" name="monitoring" />
-
 						<label for="start">Start: $</label>
 						<input type="text" value="0" class="start" name="start" />
 						<label for="length">Length: $</label>
 						<input type="text" value="ff" class="length" name="length" />
+					</div>
+					<div class="frequencyControls">
+						<label for="frequency">Execution frequency: </label>
+						<input type="range" min="1" max="512" value="256" class="frequency">
 					</div>
 
 					<div class="monitor">
