Add the snake example by Willem van der Jagt

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 							<a class="dropdown-item loadButton" href="#">skier.asm</a>
 							<a class="dropdown-item loadButton" href="#">sierpinsky.asm</a>
 							<a class="dropdown-item loadButton" href="#">softsprites.asm</a>
+							<a class="dropdown-item loadButton" href="#">snake.asm</a>
 						</div>
 					</div>
 					<textarea class="code">
