Fix typo in BIT description
Thanks to Jeff Birt

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ Absolute      BIT $4400     $2C
 </pre>
 
 <p>BIT sets the Z flag as though the value in the address tested were ANDed
-with the accumulator. The S and V flags are set to match bits 7 and 6
+with the accumulator. The N and V flags are set to match bits 7 and 6
 respectively in the value stored at the tested address.</p>
 
 <p>BIT is often used to skip one or two following bytes as in:</p>
